--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -3,29 +3,37 @@ name: Deploy Hugo site to GitHub Pages
 on:
   push:
     branches:
-      - main  # replace if your default branch is different
+      - main
 
 jobs:
   build-deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
-      
+      # 1️⃣ Checkout repo with submodules
       - name: Checkout repository
-        uses: actions/checkout@v3
-        with: 
-          submodules: true  # fetch submodules (needed for Book theme)
-          fetch-depth: 0    # full Git history
+        uses: actions/checkout@v4
+        with:
+          submodules: true
+          fetch-depth: 0
 
-
+      # 2️⃣ Setup Hugo
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: 'latest'
+          hugo-version: '0.119.0'
 
+      # 3️⃣ Build Hugo site
       - name: Build Hugo site
         run: hugo --minify
 
+      # 4️⃣ Set Git identity
+      - name: Set Git identity
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+      # 5️⃣ Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
