--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,5 @@ baseURL = "https://NoNeaux.github.io/Portfolio/"
 languageCode = "en-us"
 title = "My Resume"
 theme = "book"
+[params]
+  disableSearch = true
